--- Version 0.4.9 - Xxx-XX-XXXX

- Fixed: correct installation of rkward.desktop file
- Use the KDE default fixed spacing font for command log and object viewer

--- Version 0.4.8a - Nov-11-2007
- More reliable C stack limit detection on some systems
- Fixed: Console accepted pasted input while a command is running
- Fixed: Analysis->Moments->Moment plugin did not use the order-parameter
- Fixed: Crash on simple assignments in globalenv() with R < 2.4.0
- Fixed: Meta information (labels) did not get shown correctly in the data editor
- Add command line option "--debugger" for debugging purposes
- Fixed: Pressing the add button in a varslot with no object selected could crash RKWard

--- Version 0.4.8 - Oct-03-2007
- New plugins: pie chart, dot chart, crosstabulation, two time-series tests, and basic linear regression
- barplot plugin allow specification of custom labels
- commands run through the console from the script editor will now be added to the command history (this can be turned off in the settings)
- fixed: promise objects (created by delayedAssign()) directly in globalenv() would be forced early
- make wrapper script work, when konsole is not installed
- correct syntax highlighting for ::: and NA_integer_ and others
- silence some GCC 4.2 warnings
- fixed: crash when editing a data.frame with logicals (logicals are still mishandled, but less severe)
- fixed: would not work with R 2.6
- new translation: Simplified Chinese (contributed by Roy Qu)
- more compilation fixes for GCC 4.3
- object viewer also shows summary information, gains an update button, and MDI integration
- CLT plugins allow drawing grid
- add max.print option to R-Backend settings dialog
- syntax highlighting is minimally faster for long outputs
- graphics export plugin gains option for EPS compatibility
- fixed: inserting / removing rows in the data editor in the presence of invalid fields in later rows would lead to a crash