@@ -1,5 +1,7 @@
 --- Version 0.4.9 - Xxx-XX-XXXX
 
+- Fixed: use.value.labels option was wrong in SPSS import plugin
+- Fixed: SPSS tables would only be imported to the workspace, when the edit option was checked
 - Fixed: correct installation of rkward.desktop file
 - Use the KDE default fixed spacing font for command log and object viewer
 
